# nautilus-image-converter

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  nautilus-image-converter.doap
data/: Makefile.am  nautilus-image-resize.ui
po/: ChangeLog  LINGUAS  POTFILES.in  ca.po  cs.po  de.po  es.po  fi.po  fr.po  he.po  it.po  ja.po  nl.po  pl.po  pt_BR.po  ru.po  sk  sv.po
src/: Makefile.am  image-converter.c  nautilus-image-converter.c  nautilus-image-converter.h  nautilus-image-resize.glade  nautilus-image-resizer.c  nautilus-image-resizer.h  nautilus-image-rotate.glade  nautilus-image-rotator.c  nautilus-image-rotator.h
