NULL =

SUBDIRS = \
	po \
	src \
	$(NULL)

EXTRA_DIST = \
        intltool-extract.in \
        intltool-update.in \
        intltool-merge.in \
        $(NULL)

DISTCLEANFILES = \
        intltool-extract \
        intltool-update \
        intltool-merge \
        po/.intltool-merge-cache \
        $(NULL)

